--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
  
     <script>
-      getText("https://andrey-berlin.github.io/blog_postyk_rostyk/blog.txt");
+      getText("https://andrey-berlin.github.io/texts/blog.txt");
       async function getText(file){
         let x = await fetch(file);
         let y = await x.text();
