--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
      <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+      <meta name="author" content="Andrey Berlin"/>
+
+    <meta name="description" content="Blog of Postyk Rostyk."/>
+      <meta name="robots" content="index" />
     <title>Blog Postyka - Rostyka</title>
+      <meta property="og:image" content="https://64.media.tumblr.com/0f76aefd5eb948bd9b51e051db166f77/38c956c7ee425630-b0/s1280x1920/3fa38312bd800ee92f2a465654b833f30c205b6e.jpg">
+    <meta property="og:description" content="Blog of Postyk Rostyk." />
+    <meta property="og:title" content="Blog of Postyk Rostyk." />
+    <meta name="twitter:title" content="Blog of Postyk Rostyk." />
+    <link rel="icon" href="Blog RP.png" type="image/x-icon" />
     
   </head>
   <body>
